@@ -4,7 +4,7 @@ import com.sun.net.httpserver.Headers;
 import com.sun.net.httpserver.HttpExchange;
 import com.sun.net.httpserver.HttpHandler;
 import com.worken.backend.job.Job;
-import com.worken.backend.job.JobInput;
+import com.worken.backend.job.JobRequest;
 import com.worken.backend.job.JobService;
 
 import java.io.IOException;
@@ -49,13 +49,13 @@ public class JobsHttpHandler implements HttpHandler {
                 break;
             case "POST":
                 String body = readBody(exchange.getRequestBody());
-                JobInput input = JsonUtil.parseJobInput(body);
-                String validation = validate(input);
+                JobRequest request = JsonUtil.parseJobRequest(body);
+                String validation = validate(request);
                 if (validation != null) {
                     respond(exchange, 400, JsonUtil.error(validation));
                     return;
                 }
-                Job created = jobService.create(input);
+                Job created = jobService.create(request.toInput());
                 respond(exchange, 201, JsonUtil.toJson(created));
                 break;
             default:
@@ -81,13 +81,13 @@ public class JobsHttpHandler implements HttpHandler {
                 break;
             case "PUT":
                 String body = readBody(exchange.getRequestBody());
-                JobInput input = JsonUtil.parseJobInput(body);
-                String validation = validate(input);
+                JobRequest request = JsonUtil.parseJobRequest(body);
+                String validation = validate(request);
                 if (validation != null) {
                     respond(exchange, 400, JsonUtil.error(validation));
                     return;
                 }
-                Optional<Job> updated = jobService.update(id, input);
+                Optional<Job> updated = jobService.update(id, request.toInput());
                 if (updated.isPresent()) {
                     respond(exchange, 200, JsonUtil.toJson(updated.get()));
                 } else {
@@ -143,17 +143,17 @@ public class JobsHttpHandler implements HttpHandler {
         headers.add("Access-Control-Allow-Headers", "Content-Type");
     }
 
-    private String validate(JobInput input) {
-        if (input.getTitle() == null || input.getTitle().isBlank()) {
+    private String validate(JobRequest input) {
+        if (input.getTitle() == null || input.getTitle().trim().isEmpty()) {
             return "El título es obligatorio";
         }
-        if (input.getDescription() == null || input.getDescription().isBlank()) {
+        if (input.getDescription() == null || input.getDescription().trim().isEmpty()) {
             return "La descripción es obligatoria";
         }
-        if (input.getCategory() == null || input.getCategory().isBlank()) {
+        if (input.getCategory() == null || input.getCategory().trim().isEmpty()) {
             return "La categoría es obligatoria";
         }
-        if (input.getCity() == null || input.getCity().isBlank()) {
+        if (input.getCity() == null || input.getCity().trim().isEmpty()) {
             return "La ciudad es obligatoria";
         }
         if (input.getPayment() <= 0) {
